# shortify

./: .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  LICENSE  README.md  create_superuser.py  deploy_first_time.sh  deploy_update.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
app/: database.py  db_utils.py  logging_config.py  main.py  models.py  redis_client.py
app/admin/: auth.py  views.py
app/admin/templates/: login.html
app/auth/: country_codes.py  dependencies.py  hashing.py  jwt_handler.py  routers.py  schemas.py
app/templates/: 404.html
app/url/: routers.py  schemas.py  url_utils.py
app/visit/: routers.py  schemas.py  security.py
migrations/: env.py
migrations/versions/: 0dfdb2c171e8_new_blacklist_model.py  1f02536ad273_implemented_new_visit_tracking_model.py  2309ceba592d_initial_migrations.py  33b1ac2a971f_added_is_superuser_field_to_user_model.py  49aba142de65_add_support_request_model.py  5c6344a7642c_new_fields_in_the_visit_tracking_model.py  6bda414d5381_added_count_field_in_the_appvisit_model.py  8fb06c8079fa_implemented_new_visit_tracking_model.py  90bc9c07f529_add_title_field_to_url_model.py  cf73cd979994_added_is_bot_field_to_separately_track_.py  d087d3e9cc03_url_code_field_change.py  fb675eeb3b03_url_analytics_model_change.py
nginx/: default.conf
tests/: conftest.py  test_auth.py  test_url.py  test_utils.py  test_visit.py
