[project]
name = "url-shortner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.0",
    "fastapi[standard]>=0.120.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
]
