[project]
name = "url-shortner"
version = "0.1.0"
description = "A powerful and feature-rich URL shortener service built with FastAPI, featuring analytics, admin dashboard, rate limiting, and Redis caching."
readme = "README.md"
authors = [
    {name = "Pratik Joshi", email = "joshipratik8999@gmail.com"}
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.0",
    "fastapi[standard]>=0.120.0",
    "hashids>=1.3.1",
    "itsdangerous>=2.2.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqladmin>=0.22.0",
    "ua-parser>=0.18.0",
]

[project.urls]
"Homepage" = "https://github.com/Pratik8999/shortify"
"Repository" = "https://github.com/Pratik8999/shortify"
"Bug Tracker" = "https://github.com/Pratik8999/shortify/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
